--- a/styles/library.module.scss
+++ b/styles/library.module.scss
@@ -6,6 +6,8 @@
   align-items: center;
   min-height: 100vh;
   margin-bottom: 2rem;
+
+  color: $black;
 }
 
 .stories {
