--- a/styles/storyThumbnail.module.scss
+++ b/styles/storyThumbnail.module.scss
@@ -2,6 +2,12 @@
 
 .container {
   text-decoration: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  gap: 0.5rem;
 }
 
 .image {
@@ -12,6 +18,6 @@
 
 .title {
   font-size: 1.25rem;
-  color: black;
   margin: 0;
+  color: $black;
 }
